--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 numpy
 xgboost
+zipfile36
 Flask
-notebook
-dvc
 gunicorn
 sklearn
 pandas
@@ -11,11 +10,3 @@ evidently
 imblearn
 dill
 matplotlib
-tqdm
-seaborn
-python-box==6.0.2
-ensure==1.0.2
-joblib
-types-PyYAML
-scipy
--e .
