--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@ xgboost
 zipfile36
 Flask
 gunicorn
-sklearn
+scikit-learn
 pandas
 PyYAML
-evidently
+evidently==0.2.8
 imblearn
 dill
 matplotlib
+
